tests/baselines/reference/functionOverloads37.errors.txt
==== tests/cases/compiler/functionOverloads37.ts (2 errors) ====
    function foo(bar:{a:number;}[]):string;
    function foo(bar:{a:boolean;}[]):number;
    function foo(bar:{a:any;}[]):any{ return bar }
    var x = foo();
            ~~~
!!! functionOverloads37.ts(4,9): error TS2081: Supplied parameters do not match any signature of call target.
            ~~~
!!! functionOverloads37.ts(4,9): error TS2087: Could not select overload for 'call' expression.
    